--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,42 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Spotify</title>
+  <link rel="stylesheet" href="/starter-code/css/main.css">
 </head>
+
 <body>
-Premium Discover Help Download
+  <nav>
+    <div class="navbar">
+      <div class="navlogo">
+        <a href="">
+          <img src="images/spotify-logo.png" alt=""></a>
 
-Music for everyone.
-Spotify is now free on mobile, tablet and computer.
-Listen to the right music, wherever you are.
+      </div>
+      <div class="navopt">
+        <div>
 
-What’s on Spotify?
+          <a href=""> Premium</a>
+        </div>
 
-Millions of Songs
-There are millions of
-songs on Spotify
+        <div>
+          <a href=""> Discover </a>
 
-HD Music
-Listen to music as if you
-were listening live
+        </div>
+        <div>
 
-Stream Everywhere
-Stream music on your
-smartphone, tablet or
-computer
+          <a href=""> Help</a>
+        </div>
+        <div>
 
-It’s as yeezy as Kanye West.
-Search
-Know what you want to listen to?
-Just search and hit play.
-Browse
-Check out the latest charts,
-brand new releases and great
-playlists for right now.
-Discover
-Enjoy new music every Monday
-with your own personal playlist.
-Or sit back and enjoy Radio.
+          <a href=""> Download</a>
+        </div>
+      </div>
+    </div>
+
+  </nav>
+
+  <header>
+    <div class="main">
+      <div class="textbox">
+        <div>
+          <h1>
+            Music for everyone.
+          </h1>
+        </div>
+
+        <div class="text-2nd">
+          <h2>
+            Spotify is now free on mobile, tablet and computer.
+            Listen to the right music, wherever you are.
+
+          </h2>
+        </div>
+      </div>
+
+    </div>
+
+
+  </header>
+
+  <section>
+    <div class="whatsonmain">
+      <div class="whatson">
+        <h2>Whats on Spotify?</h2>
+      </div>
+
+      <div class="icons">
+        <div class="speaker">
+          <div class="img"><img src="/starter-code/images/music-icon.png" alt=""></div>
+          <div class="txt">
+            <h3> <span> Millions of Songs</span> <br><br>
+              There are millions of
+              songs on Spotify</h3>
+          </div>
+        </div>
+        <div class="waves">
+          <div class="img"><img src="/starter-code/images/high-quality-icon.png" alt=""></div>
+          <div class="txt">
+            <h3> <span>HD Music</span> <br><br> Listen to music as if you
+              were listening live </h3>
+          </div>
+        </div>
+        <div class="phones">
+          <div class="img"><img src="/starter-code/images/devices-icon.png" alt=""></div>
+          <div class="txt">
+            <h3> <span>Stream Everywhere</span> <br><br>
+              Stream music on your
+              smartphone, tablet or
+              computer</h3>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+
+  </section>
+  <div class="yeezymain">
+    <div class="yeezytext">
+      <h3>
+
+        It’s as yeezy as Kanye West.
+      </h3>
+
+      <h4>
+        Search
+
+      </h4>
+      <p>
+        Know what you want to listen to? <br>
+        Just search and hit play.
+
+      </p>
+      <h4>
+        Browse
+
+      </h4>
+      <p>
+        Check out the latest charts, <br>
+        brand new releases and great <br>
+        playlists for right now.
+
+      </p>
+      <h4>
+        Discover
+
+      </h4>
+      <p>
+        Enjoy new music every Monday <br>
+        with your own personal playlist. <br>
+        Or sit back and enjoy Radio.
+
+      </p>
+
+
+    </div>
+    <div class="yeezypic">
+      <img src="/starter-code/images/spotify-app.jpg" alt="">
+
+    </div>
+
+
+  </div>
+  <section>
+
+
+
+  </section>
+
+
 </body>
+
 </html>
